[package]
name = "invoice_liquidity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { version = "25.3.1" }

[dev-dependencies]
ed25519-dalek = "2.2.0"
proptest = "1"
rand = "0.10.1"
serde_json = "1.0.149"
soroban-sdk = { version = "25.3.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
